# EmissionControl2

./: .gitignore  .gitignore.swp  .gitmodules  README.md  changelog.txt  notice.txt  valgrind-output.txt
.github/workflows/: ccpp.yml
Classes/GUI/: ControlSet-3_10-TEST.scd  ControlSet-3_10.sc  DensitySlider-3_10.sc  ECTilt-3_10-TEST.scd  ECTilt-3_10.sc  ECWavetable-3_10.sc  Joystick3_10.sc  Joystick3_10TEST.scd  ModulationSlider-3_10.sc  PresetButton-3_10-TEST.scd  ShaperPanel-3_10.sc  SliderOptions-3_10-TEST.scd  ZoomSlider-3_10-TEST.scd
Classes/GUI/DEPRECATED/: SCNumberBox2-3_10-TEST.scd
Classes/GUI/GUITestFiles/: CloudTest2.scd  CloudTest3.scd  CloudTest4.scd  temp3.rtf  temp5.rtf
GUI/: ControlSet-3_10-TEST.scd  DensitySlider-3_10-TEST.scd  DensitySlider-3_10.sc  ECTiltButton-3_10.sc  ECWavetable-3_10-TEST.scd  ECWavetable-3_10.sc  Joystick3_10.sc  Joystick3_10TEST.scd  MappableSlider-3_10-TEST.scd  MappableSlider-3_10.sc  ModulationSlider-3_10-TEST.scd  ModulationSlider-3_10.sc  NumberBox2-3_10-TEST.scd  NumberBox2-3_10.sc  ParameterSlider-3_10-TEST.scd  ParameterSlider-3_10.sc  Preset-3_10-TEST.scd  Preset-3_10.sc  PresetButton-3_10-TEST.scd  PresetButton-3_10.sc  PresetController-3_10-TEST.scd  PresetController-3_10.sc  PresetInterpolator-3_10-TEST.scd  PresetInterpolator-3_10.sc  SliderOptions-3_10-TEST.scd  SliderOptions-3_10.sc  Tilt-3_10-TEST.scd  Tilt-3_10.sc  TiltButton-3_10-TEST.scd  TiltButton-3_10.sc  ZoomSlider-3_10-TEST.scd  ZoomSlider-3_10.sc
GUI/DEPRECATED/: SCNumberBox2-3_10.sc
GUI/GUITestFiles/: CloudTest1.scd  CloudTest2.scd  CloudTest3.scd  CloudTest4.scd  CloudTest5.scd  CloudTest6_demo.scd  temp1.rtf
deployment/: EmissionControl2_1.0-1_amd64.deb
deployment/EmissionControl20_Linux/presets/: 1.preset  2.preset  default.presetMap
deployment/EmissionControl20_OSX/EmissionControl20.app/Contents/: Info.plist
deployment/EmissionControl20_OSX/EmissionControl20.app/Contents/MacOS/: EmissionControl20  runPackage_OSX.sh
deployment/EmissionControl20_OSX/EmissionControl20.app/Contents/Resources/: emissionControl
deployment/EmissionControl2_1.0-1_amd64/DEBIAN/: control
docs/7_26-update/: current_issues.txt
docs/EC-updates2019/: current_issues.txt
docs/historical/GUIColors/EC-updates2019/: current_issues.txt
docs/historical/ec_2004/: ECGUI_v1.tiff
dsp/: CMakeLists.txt  clean.sh  configure.sh  imgui.ini  run.sh  test.cpp
dsp/.trash/: external.cmake
dsp/GranularVoices-data/: 0.preset  1.preset  12.preset  2.preset  3.preset  4.preset  5.preset  default.presetMap
dsp/alloTests/: const.h  dynamicSceneTest.cpp  emissionControl.h  granular.cpp  test.cpp  utility.h
dsp/include/: const.h  ecInterface.h  ecSynth.h  emissionControl.h  utility.h
dsp/mods-data/: 0.preset  1.preset  default.presetMap
dsp/scripts/: clean.sh  configure.sh  dmgEC20_OSX.sh  dmgEC2_OSX.sh  packageDEB.sh  packageEC20_Linux.sh  packageEC20_OSX.sh  run.sh  runPackage_OSX.sh
dsp/src/: ecInterface.cpp  ecSynth.cpp  emissionControl.cpp  granular.cpp  main.cpp  test.cpp  utility.cpp
dsp/test/: CMakeCache.txt  RtMidiConfigUninstall.cmake  cmake_install.cmake
dsp/test/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  emissionControl_postBuildPhase.makeDebug  emissionControl_postBuildPhase.makeMinSizeRel  emissionControl_postBuildPhase.makeRelWithDebInfo
dsp/test/emissionControl.build/Debug/ZERO_CHECK.build/: Script-52B008F2486346B985828694.sh  dgph  dgph~
dsp/test/emissionControl.build/Debug/ecLib.build/: dgph  dgph~
dsp/test/emissionControl.build/Debug/ecLib.build/Objects-normal/x86_64/: ecInterface.d  ecInterface.dia  ecLib.LinkFileList  ecSynth.d  ecSynth.dia  emissionControl.d  emissionControl.dia  utility.d
dsp/test/emissionControl.build/Debug/emissionControl.build/: Script-D2DC793F63514B588FAD403A.sh  dgph  dgph~
dsp/test/emissionControl.build/Debug/emissionControl.build/Objects-normal/x86_64/: emissionControl.LinkFileList  main.d  main.dia
dsp/test/emissionControl.xcodeproj/: project.pbxproj
dsp/test/emissionControl.xcodeproj/project.xcworkspace/xcuserdata/jkilgore.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
dsp/test/emissionControl.xcodeproj/xcuserdata/jkilgore.xcuserdatad/xcschemes/: xcschememanagement.plist
ecSource/: CMakeLists.txt
ecSource/include/: const.h  ecInterface.h  ecSynth.h  emissionControl.h  fonts.hpp  utility.h
ecSource/scripts/: build.sh  clean.sh  configure.sh  debug.sh  dmgEC2_OSX.sh  install_linux.sh  packageDEB.sh  packageOSX.sh  packageWindows.sh  run.sh  uninstall_linux.sh
ecSource/src/: ecInterface.cpp  ecSynth.cpp  emissionControl.cpp  utility.cpp
emissionControl/: emissionControl
emissionControlApp/: emissionControl
emissionControlApp/libraries/libsndfile/: libsndfile.1.dylib
emissionControlApp/presets/: 0.preset  1.preset  2.preset  default.presetMap
externalResources/config_scripts/: configAbsoDirectories-linux.sh  configAbsoDirectories-osx.sh
externalResources/icon/: EmissionControl2.icns
externalResources/libsndfile/: libogg.0.dylib  libvorbisenc.2.dylib
externalResources/linux/: README.txt  linux_preset_migrate.sh
externalResources/osx/: MacOSXBundleInfo.plist.in  launchEmissionControl20  launchEmissionControl20.sh
externalResources/scripts/: appify.sh  test.sh
externalResources/windows/: README.txt  ec2-windows.rc
samples/: noise.aiff  pluck.aiff
sc/: EmissionControl_0.8.1.scd
sc/Classes/: RCloud.sc
sc/Classes/GUI/: Debug-3_10.sc  ECTiltButton-3_10-TEST.scd  ECWavetable-3_10-TEST.scd  Joystick3_10.sc  MappableSlider-3_10-TEST.scd  MappableSlider-3_10.sc  ModulationSlider-3_10-TEST.scd  ParameterSlider-3_10.sc  PresetButton-3_10.sc  PresetController-3_10-TEST.scd  PresetController-3_10.sc  SliderOptions-3_10.sc  ZoomSlider-3_10-TEST.scd  ZoomSlider-3_10.sc
sc/Classes/GUI/GUITestFiles/: CloudTest1.scd  CloudTest5.scd  CloudTest6_demo.scd  temp2.rtf  temp4.rtf
sc/plugins/: RCloudUGens.scx
(+6 files in other folders)
